Wed Nov 15 15:51:35 2023  Rob Lauer  <rlauer6@comcast.net>

	[BigBang]:
	* .gitignore: add .3man
	* README.md: new
	* includes/perl-modules.inc: dependencies
	* src/examples/myscript.pm: new
	* src/main/perl/lib/CLI/Simple.pm.in
	- replace template with actual file
	* src/main/perl/lib/CLI/Simple/Constants.pm.in: likewise
	* src/main/perl/lib/CLI/Simple/Utils.pm.in: likewise
	* src/main/perl/lib/CLI/Simple/Constants/README.md: new
	* src/main/perl/lib/CLI/Simple/README.md: new
	* src/main/perl/lib/CLI/Simple/Utils/README.md: new
	* src/main/perl/lib/README.md: new

Wed Nov 15 08:15:23 2023 <rlauer6@comcast.net>

	[BigBang]:

	* VERSION: new
	* .autoconf-template-perlrc: new
	* .gitignore: new
	* bootstrap: new
	* ChangeLog: new
	* configure.ac: new
	* COPYING: new
	* COPYRIGHT: new
	* Makefile.am: new
	* manifest.yaml: new
	* perl-CLI-Simple.spec.in: new
	* perlcriticrc: new
	* perltidyrc: new
	* README.md: new
	* requires.json: new
	* requires.txt: new
	* autotools/ads_PERL_INCLUDES.m4: new
	* autotools/ads_PERL_MODULE.m4: new
	* autotools/ads_PROG_PERL.m4: new
	* autotools/am_build_mode.m4: new
	* autotools/am_perlcritic_mode.m4: new
	* autotools/apache_config.m4: new
	* autotools/ax-extra-opts.m4: new
	* autotools/ax_am_conditional_example.m4: new
	* autotools/ax_deps_check.m4: new
	* autotools/ax_distcheck_hack.m4: new
	* autotools/ax_perlcritic_config.m4: new
	* autotools/ax_requirements_check.m4: new
	* autotools/prove.sh.in: new
	* autotools/test-driver: new
	* config/Makefile.am: new
	* cpan/Makefile.am: new
	* cpan/requries: new
	* cpan/test-requires: new
	* cpan/buildspec.yml
	* includes/apache-directories.inc: new
	* includes/bash-bin.inc: new
	* includes/directories.inc: new
	* includes/perl-bin.inc: new
	* includes/perl-cgi-bin.inc: new
	* includes/perl-modules.inc: new
	* includes/perlcritic.inc: new
	* install-from-cpan.in: new
	* resources/Makefile.am: new
	* src/main/bash/bin/Makefile.am: new
	* src/main/bash/Makefile.am: new